[workspace]
members = ["smb", "smb-cli"]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.85.0"
license = "MIT"
description = "A Pure Rust SMB Client implementation"
homepage = "https://github.com/AvivNaaman/smb-rs"
repository = "https://github.com/AvivNaaman/smb-rs"
authors = ["Aviv Naaman <avivnaaman04@gmail.com>"]
keywords = ["smb", "network", "file-sharing", "windows"]
categories = ["network-programming", "parsing", "filesystem"]
readme = "README.md"

# Profiling: release (optimized) with debug info
[profile.profiling]
inherits = "release"
debug = true
